Fixes performance issue : Ensure text remains visible during webfont load

--- a/src/styles/common/_fonts.scss
+++ b/src/styles/common/_fonts.scss
@@ -10,6 +10,7 @@ Generated using https://www.fontsquirrel.com */
        url('../../static/fonts/Pacifico/Pacifico-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 /* Maven Pro
@@ -23,6 +24,7 @@ Generated using http://transfonter.org/ */
       url('../../static/fonts/Maven_Pro/MavenPro-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -32,6 +34,7 @@ Generated using http://transfonter.org/ */
       url('../../static/fonts/Maven_Pro/MavenPro-Medium.woff') format('truetype');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -41,6 +44,7 @@ Generated using http://transfonter.org/ */
       url('../../static/fonts/Maven_Pro/MavenPro-Regular.woff') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -50,6 +54,7 @@ Generated using http://transfonter.org/ */
       url('../../static/fonts/Maven_Pro/MavenPro-ExtraBold.woff') format('truetype');
   font-weight: 800;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -59,6 +64,7 @@ Generated using http://transfonter.org/ */
       url('../../static/fonts/Maven_Pro/MavenPro-Black.woff') format('truetype');
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -68,5 +74,6 @@ Generated using http://transfonter.org/ */
       url('../../static/fonts/Maven_Pro/MavenPro-SemiBold.woff') format('truetype');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
